@@ -391,15 +391,5 @@ public class CargoContainerTest
         assertTrue( ! cargo.remove( id ) );
     }
 
-    /**
-     *    \Todo: this method does not exist... bug: 9766
-     */
-//     @Test
-//     public void testPidPrefix()
-//     {
-//         assertNull( cargo.getPidPrefix() );
-//         cargo.setPidPrefix( "prefix" );
-//         assertEquals( new String( "prefix" ), cargo.getPidPrefix() );
-//     }
 
 }
