@@ -1,1 +1,2 @@
 1.1.0
+   - bug [9766] "CargoContainerTest kalder metode der ikke findes"
